clarify partner signup stati better
